started on plot

--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   right:
     - text: "About"
       href: experience.html
+    - text: "Plots"
+      href: plot.html
     - icon: fa-envelope fa-lg
       href: mailto:<mfu0860@gmail.com>
     - icon: fa-github fa-lg
